[package]
name = "RqTT"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc-next = { version = "0.30.0", features = ["url"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net", "time"] }
dotenvy = { version = "0.15.7" }
serde = { version = "1", features = ["derive"] }
config = "0.15.22"
